double border problem for menu title fixed

--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -21,7 +21,16 @@ h1 {
 	width: 100px;
 	padding: 5px;
 	margin: 0px;
-	border: 1px solid black;
+
+	border-bottom-width: 1px;
+	border-left-width: 1px;
+
+	border-bottom-color: black;
+	border-left-color: black;
+
+	border-bottom-style: solid;
+	border-left-style: solid;	
+
 	text-align: center;
 	font-size: 125%;
 	font-weight: bold;
